# llm-demand-forecaster

./: .gitattributes  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/processed/: final.parquet  llm_item_archetypes.parquet
models/: lgb_baseline_FOODS_3_021.joblib  lgb_model.joblib  lgbm_m5_20260305_2147.joblib  lgbm_m5_20260307_1301.joblib
src/: api.py  evaluate.py
src/data/: build_llm_archetypes.py  features.py  load.py  transform.py
src/model/: plot_importance.py  train_lgb.py
