[project]
name = "llm-demand-forecaster"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.66.1",
    "fastapi>=0.135.1",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.0",
    "numpy>=2.2.6",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"] # Enables standard errors, fatal errors, and isort (import sorting)
build-archetypes = "src.data.build_llm_archetypes:main"
